# RobotexLineFollowerCamera

./: .gitignore  CMakeLists.txt
arduino/src/: ByteInversionTable.h  CMakeLists.txt  Camera.h  GrayScaleTable.h  MonochromeBufferMask.h  Screen.h  main.cpp
arduino/src/camera/buffered/: BufferedCameraOV7670.h  BufferedCameraOV7670_80x120_10hz_Grayscale.h  BufferedCameraOV7670_QQVGA.h  (+2 more)
arduino/src/capture/: FrameCapture.h
arduino/src/databuffer/: DataBufferSender.cpp  DataBufferSender.h
arduino/src/line/: Line.cpp  Line.h  LineEdge.h  LineSegment.cpp  LineSegment.h  LineStep.h  RowBitmapLineSegmentFinder.cpp  RowBitmapLineSegmentFinder.h  RowLinePosition.cpp  RowLinePosition.h
arduino/src/screen/: Adafruit_ST7735_mod.cpp  Adafruit_ST7735_mod.h
arduino/src/utils/: Utils.h
doc/: .gitignore  Slope_calc.ods  greyscale_table.ods  monochrome_buffer_index.ods
pcb/: CameraBoard-cache.lib  CameraBoard.bak  CameraBoard.kicad_pcb  CameraBoard.kicad_pcb-bak  CameraBoard.net  CameraBoard.pro  CameraBoard.sch  _autosave-CameraBoard.kicad_pcb  fp-lib-table
pcb/CameraBoard/: .gitignore  CameraBoard-cache.lib  CameraBoard.bak  CameraBoard.kicad_pcb  CameraBoard.kicad_pcb-bak  CameraBoard.net  CameraBoard.pro  CameraBoard.sch
pcb/CameraBoard/gerber/: CameraBoard-B.Cu.gbl  CameraBoard-B.SilkS.gbo  CameraBoard-F.Cu.gtl  CameraBoard.drl
pcb/LibMod/Indrek/: shiftregister_74hc165.bak  shiftregister_74hc165.lib  shiftregister_74hc595.bak
pcb/ScreenBoard/: ScreenBoard-cache.lib  ScreenBoard.bak  ScreenBoard.kicad_pcb  ScreenBoard.kicad_pcb-bak  ScreenBoard.net  ScreenBoard.pro  ScreenBoard.sch  fp-lib-table
pcb/ScreenBoard/gerber/: ScreenBoard-B.Cu.gbr  ScreenBoard-B.Mask.gbr  ScreenBoard-B.SilkS.gbr  ScreenBoard-Edge.Cuts.gbr  ScreenBoard-F.Cu.gbr  ScreenBoard-F.Mask.gbr  ScreenBoard-F.SilkS.gbr  ScreenBoard.drl
pcb/gerber/: CameraBoard-B.Cu.gbl  CameraBoard-B.Mask.gbs  CameraBoard-B.SilkS.gbo  CameraBoard-Edge.Cuts.gm1  CameraBoard-F.Cu.gtl  CameraBoard-F.Mask.gts  CameraBoard-F.SilkS.gto  CameraBoard.drl
src/: ByteInversionTable.h  GrayScaleTable.h  LineFollowerCamera.ino  main.cpp  main.h
src/camera/: CameraOV7670.cpp  CameraOV7670.h  CameraOV7670_QQVGA.h  CameraOV7670_QQVGA_10hz.cpp  CameraOV7670_QQVGA_10hz.h  CameraOV7670_QQVGA_5hz.h  OV7670Initializer.cpp  OV7670Initializer.h  OV7670InitializerRegsYUV422.cpp
src/camera/base/: BufferedCameraOV7670.h  CameraOV7670.cpp  CameraOV7670.h  CameraOV7670RegsClock.cpp  CameraOV7670RegsDefault.cpp
src/databuffer/: DataBufferSender.cpp  DataBufferSender.h
src/utils/: Utils.h
test/: CMakeLists.txt
test/fake/: Arduino.h
test/src/: exampletest2.cpp
test/src/line/: CapturedScreenTest.cpp  LineEdgeTest.cpp  LineTest.cpp  RowBitmapLineSegmentFinderTest.cpp  RowLinePositionTest.cpp
test/utils/: TestScreenProcessor.cpp  TestScreenProcessor.h
(+24 files in other folders)
